tests/parser/define-class.9.bad.error
error: Malformed class definition
  --> test:4:15
   |
 4 |  (define-class (=>))
   |                 ^^ unnecessary `=>`
